update settings for jdk 11, skip IT