@@ -74,8 +74,9 @@
 		<maven.deploy.skip>true</maven.deploy.skip>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<failsafe.version>3.1.0</failsafe.version>
-		<jacoco.version>0.8.9</jacoco.version>
+		<failsafe.version>3.2.3</failsafe.version>
+		<jacoco.version>0.8.11</jacoco.version>
+		<argLine />
 	</properties>
 
 	<modules>
@@ -242,6 +243,26 @@
 						</executions>
 					</plugin>
 				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<activation>
+				<jdk>[21,)</jdk>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.2.3</version>
+							<configuration>
+								<argLine>@{argLine} -Xshare:off
+									-XX:+EnableDynamicAgentLoading</argLine>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
 			</build>
 		</profile>
 	</profiles>
